--- a/src/main/resources/theChemistResources/localization/eng/CharacterStrings.json
+++ b/src/main/resources/theChemistResources/localization/eng/CharacterStrings.json
@@ -7,7 +7,9 @@
     "TEXT": [
       "A master of the sciences. NL This description needs some work.",
       "NL You prepare your strongest mixture...",
-      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~gifted~ ~one,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~gifted~ ~one,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~",
+      "I don't have enough Reagents!",
+      "I don't have any Reagents!"
     ]
   }
 }
