--- a/src/main/resources/theChemistResources/localization/eng/RelicStrings.json
+++ b/src/main/resources/theChemistResources/localization/eng/RelicStrings.json
@@ -1,14 +1,14 @@
 {
   "theChemist:DragonsGift": {
     "NAME": "Dragon's Gift",
-    "FLAVOR": "Flavor text goes here.",
+    "FLAVOR": "Unwillingly parted with, but a gift nonetheless.",
     "DESCRIPTIONS": [
       "Start each combat with a Dragon Fang in your stockpile."
     ]
   },
   "theChemist:TaintedFlask": {
     "NAME": "Tainted Flask",
-    "FLAVOR": "Flavor text goes here.",
+    "FLAVOR": "A stronger dose never hurt anyone.",
     "DESCRIPTIONS": [
       "Enemies with #yImbalance take #b75% more damage rather than #b50%."
     ]
