--- a/src/main/resources/theChemistResources/localization/eng/PowerStrings.json
+++ b/src/main/resources/theChemistResources/localization/eng/PowerStrings.json
@@ -1,10 +1,4 @@
 {
-  "theChemist:AlchemicalProwessPower": {
-    "NAME": "Alchemical Prowess",
-    "DESCRIPTIONS": [
-      "#yMix effects have #b50% increased potency."
-    ]
-  },
   "theChemist:ImbalancePower": {
     "NAME": "Imbalance",
     "DESCRIPTIONS": [
@@ -20,6 +14,12 @@
       "#yFling will always target this enemy for #b",
       " turn.",
       " turns."
+    ]
+  },
+  "theChemist:ProwessPower": {
+    "NAME": "Prowess",
+    "DESCRIPTIONS": [
+      "#yMix effects have #b50% increased potency."
     ]
   },
   "theChemist:StockpilePower": {
