--- a/src/main/resources/theChemistResources/localization/eng/PowerStrings.json
+++ b/src/main/resources/theChemistResources/localization/eng/PowerStrings.json
@@ -1,4 +1,11 @@
 {
+  "theChemist:GoliathTonicPower": {
+    "NAME": "Goliath Tonic",
+    "DESCRIPTIONS": [
+      "At the end of combat, lose #b",
+      " maximum HP."
+    ]
+  },
   "theChemist:ImbalancePower": {
     "NAME": "Imbalance",
     "DESCRIPTIONS": [
