--- a/src/main/resources/theChemistResources/localization/eng/RelicStrings.json
+++ b/src/main/resources/theChemistResources/localization/eng/RelicStrings.json
@@ -3,7 +3,7 @@
     "NAME": "Dragon's Gift",
     "FLAVOR": "Unwillingly parted with, but a gift nonetheless.",
     "DESCRIPTIONS": [
-      "Start each combat with a Dragon Fang in your stockpile."
+      "Start each combat with a #yDragon #yFang in your stockpile."
     ]
   },
   "theChemist:TaintedFlask": {
