--- a/src/main/resources/theChemistResources/localization/eng/PowerStrings.json
+++ b/src/main/resources/theChemistResources/localization/eng/PowerStrings.json
@@ -30,6 +30,13 @@
       "."
     ]
   },
+  "theChemist:GalvanizedPower": {
+    "NAME": "Galvanized",
+    "DESCRIPTIONS": [
+      "At the start of your turn, gain ",
+      "."
+    ]
+  },
   "theChemist:GoliathTonicPower": {
     "NAME": "Goliath Tonic",
     "DESCRIPTIONS": [
